--- a/privacy.html
+++ b/privacy.html
@@ -4,11 +4,11 @@
 <body style="font-family:Arial; padding:20px;">
 <h1>Privacy Policy</h1>
 <p><strong>Last updated: 5 November 2025</strong></p>
-<p>We **do not collect** any personal data.</p>
-<p>We scan **public HTML only** — no cookies, no emails, no logins.</p>
+<p>We **do not collect** any personal data. Public data only, minimized processing, opt-out via robots.txt. GDPR: Legitimate interest basis; <a href="mailto:privacy@p-score.me">request deletion</a>.</p>
 <p>Scans are deleted after 24 hours.</p>
 <p>Want to opt out? Add to your <code>robots.txt</code>:</p>
 <pre>User-agent: PythiaBot
 Disallow: /</pre>
+<p>© 2025 Cronix Holdings (Pty) Ltd, South Africa</p>
 </body>
 </html>
