--- a/tos.html
+++ b/tos.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head><title>Terms – p-score.me</title></head>
+<head><title>ToS – p-score.me</title></head>
 <body style="font-family:Arial; padding:20px;">
 <h1>Terms of Service</h1>
 <p><strong>Last updated: 5 November 2025</strong></p>
-<p>p-score.me scans **public websites only**.</p>
-<p><strong>You agree:</strong></p>
-<ul>
-  <li>Not to scan more than 25 sites per hour</li>
-  <li>Scores are estimates — not guarantees</li>
-</ul>
-<p><strong>We are not liable</strong> for any damage.</p>
-<p>Governed by the laws of South Africa.</p>
+<p>Pythia™ provides automated website analysis. Scores are estimates only. No warranties. Disputes: <a href="mailto:dispute@p-score.me">dispute@p-score.me</a>.</p>
+<p>© 2025 Cronix Holdings (Pty) Ltd, South Africa</p>
 </body>
 </html>
