--- a/tos.html
+++ b/tos.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head><title>ToS – p-score.me</title></head>
-<body style="font-family:Arial; padding:20px;">
-<h1>Terms of Service</h1>
-<p><strong>Last updated: 5 November 2025</strong></p>
-<p>Pythia™ provides automated website analysis. Scores are estimates only. No warranties. Disputes: <a href="mailto:dispute@p-score.me">dispute@p-score.me</a>.</p>
-<p>© 2025 Cronix Holdings (Pty) Ltd, South Africa</p>
+<head>
+  <title>ToS – Pythia™</title>
+</head>
+<body style="font-family: Arial; padding: 20px;">
+  <h1>Terms of Service</h1>
+  <p>Last updated: November 2025</p>
+  <p>Pythia™ provides automated estimates. No warranties. Disputes: dispute@p-score.me.</p>
 </body>
 </html>
