--- a/privacy.html
+++ b/privacy.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head><title>Privacy – p-score.me</title></head>
-<body style="font-family:Arial; padding:20px;">
-<h1>Privacy Policy</h1>
-<p><strong>Last updated: 5 November 2025</strong></p>
-<p>We **do not collect** any personal data. Public data only, minimized processing, opt-out via robots.txt. GDPR: Legitimate interest basis; <a href="mailto:privacy@p-score.me">request deletion</a>.</p>
-<p>Scans are deleted after 24 hours.</p>
-<p>Want to opt out? Add to your <code>robots.txt</code>:</p>
-<pre>User-agent: PythiaBot
-Disallow: /</pre>
-<p>© 2025 Cronix Holdings (Pty) Ltd, South Africa</p>
+<head>
+  <title>Privacy – Pythia™</title>
+</head>
+<body style="font-family: Arial; padding: 20px;">
+  <h1>Privacy Policy</h1>
+  <p>Last updated: November 2025</p>
+  <p>No PII stored. Public data only. Opt-out via robots.txt. Deletion: dispute@p-score.me.</p>
+  <p>Basis: Legitimate interest per CNIL 2025 guidance.</p>
 </body>
 </html>
