--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@
 
         <div class="flex items-center justify-center gap-4 mb-2">
 
-          <img id="pythiaLogo" src="pythia-oracle.png" alt="Pythia Oracle" class="w-20 h-20" style="display:none; image-rendering: pixelated;">
+          <img id="pythiaLogo" src="pythia-oracle.png" alt="Pythia Oracle" class="w-20 h-20" style="display:block; image-rendering: pixelated;">
 
           <h1 class="text-6xl font-bold bg-gradient-to-r from-indigo-600 to-purple-600 bg-clip-text text-transparent">Pythia™</h1>
 
