--- a/index.html
+++ b/index.html
@@ -259,11 +259,12 @@
                     <div id="pythiaQuote" class="border-4 border-green-500 p-4 bg-black text-green-400 max-w-md text-left">
                         "At Delphi in ancient Greece, the Pythia spoke cryptic truths from the gods. Now seek her oracle wisely — your site awaits her verdict!"
                     </div>
-                    <div class="flex flex-col items-center">
-                        <img id="oracleImage" src="pythia-oracle.png" alt="PythiaTM Oracle" class="w-40 h-40" style="display:block; image-rendering: pixelated;">
-                        <h1 class="text-6xl font-bold bg-gradient-to-r from-indigo-600 to-purple-600 bg-clip-text text-transparent">
-                            Pythia<sup>TM</sup> </h1>
-                    </div>
+                    
+                    <img id="oracleImage" src="pythia-oracle.png" alt="PythiaTM Oracle" class="w-40 h-40" style="display:block; image-rendering: pixelated;">
+                    
+                    <h1 class="text-6xl font-bold bg-gradient-to-r from-indigo-600 to-purple-600 bg-clip-text text-transparent">
+                        Pythia<sup>TM</sup> 
+                    </h1>
                 </div>
                 <p class="text-gray-600 text-lg">
                     Complete website performance oracle <span class="text-sm bg-yellow-200 px-2 py-1 rounded">BETA</span>
