--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pythia> – Website Performance Oracle (BETA)</title> <script src="https://cdn.tailwindcss.com"></script>
+    <title>Pythia – Website Performance Oracle (BETA)</title> <script src="https://cdn.tailwindcss.com"></script>
     <style>
         /* Original Animations */
         @keyframes pulse-glow {
