--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@
                     <input
                         id="urlInput"
                         type="url"
+                        value="https://"
                         placeholder="https://example.com"
                         class="flex-1 px-4 py-3 border-2 border-gray-200 rounded-xl focus:outline-none focus:border-indigo-500 transition"
                     >
@@ -343,9 +344,9 @@
                     <div class="border-t pt-6">
                         <h3 class="text-lg font-bold text-purple-600 mb-3">Custom Battle</h3>
                         <div class="grid gap-4 mb-4">
-                            <input id="customUrl1" type="url" placeholder="https://example1.com"
+                            <input id="customUrl1" type="text" value="https://" placeholder="example1.com"
                                 class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:border-indigo-500">
-                            <input id="customUrl2" type="url" placeholder="https://example2.com"
+                            <input id="customUrl2" type="text" value="https://" placeholder="example2.com"
                                 class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:border-indigo-500">
                         </div>
                         <button id="customBattleBtn" class="retro-button w-full py-3 bg-purple-600 text-white font-bold rounded-lg hover:bg-purple-700 transition">
