--- a/index.html
+++ b/index.html
@@ -332,8 +332,14 @@
                 </div>
             </div>
 
-            <div id="resultsContainer" class="hidden grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4 mb-8">
-            </div>
+            <div id="pillar1-performance-container" class="hidden grid grid-cols-2 md:grid-cols-4 gap-4 mb-4">
+                </div>
+
+            <div id="pillar2-quality-container" class="hidden grid grid-cols-2 md:grid-cols-4 gap-4 mb-4">
+                </div>
+
+            <div id="pillar3-future-container" class="hidden grid grid-cols-2 md:grid-cols-3 gap-4 mb-8 max-w-lg mx-auto">
+                </div>
 
             <div id="leaderboard" class="hidden modern-card bg-white rounded-2xl shadow-xl p-6 mb-8">
                 <h2 class="text-2xl font-bold text-gray-800 mb-4"> 🏆 Global Leaderboard</h2>
