--- a/index.html
+++ b/index.html
@@ -1001,18 +1001,20 @@ const metrics = [
         
         return `
             <div class="score-card modern-card bg-white rounded-xl shadow-md p-4 flex flex-col justify-between transition transform hover:scale-[1.03]">
-                <div class="text-xs font-bold uppercase ${metric.id === 'echo' ? 'text-lime-800' : 'text-gray-500'}">
-                    ${metric.id.toUpperCase()}
-                    <div class="tooltip ml-1 inline-block cursor-pointer text-gray-400 hover:text-gray-700">
-                        ?
-                        <span class="tooltiptext">${metric.tooltip}</span>
-                    </div>
-                </div>
-                <div class="text-2xl font-bold ${isRetro ? retroScoreColor : scoreColor} my-1">${score}</div>
-                <div class="text-sm text-gray-700 font-medium">${metric.name}</div>
-            </div>
-        `;
-    };
+<div class="text-xs font-bold uppercase ${metric.id === 'echo' ? 'text-lime-800' : 'text-gray-500'}">
+    ${metric.id.toUpperCase()}
+    <div class="tooltip ml-1 inline-block cursor-pointer text-gray-400 hover:text-gray-700">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+        </svg>
+        <span class="tooltiptext">${metric.tooltip}</span>
+    </div>
+</div>
+<div class="text-2xl font-bold ${isRetro ? retroScoreColor : scoreColor} my-1">${score}</div>
+<div class="text-sm text-gray-700 font-medium">${metric.name}</div>
+</div>
+`;
+};
     
     // Split the METRICS array into the three pillars for display. This defines the missing variables.
     const p1metrics = METRICS.slice(0, 4);  // Pillar 1: Performance (Karpov, Tyche, Vortex, Nexus)
