--- a/index.html
+++ b/index.html
@@ -942,12 +942,20 @@ const metrics = [
         const exportBtn = document.getElementById('exportBtn');
         if (exportBtn) exportBtn.style.display = 'none';
 
-        try {
-            const response = await fetch('/api/scan', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ url })
-            });
+        const response = await fetch(url, {
+        method: 'GET',
+        redirect: 'follow',
+        headers: {
+            'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36',
+            'Accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.7',
+            'Accept-Encoding': 'gzip, deflate, br',
+            'Accept-Language': 'en-US,en;q=0.9',
+            'Upgrade-Insecure-Requests': '1',  // Signals browser-like behavior
+            'Sec-Fetch-Mode': 'navigate',     // Mimics browser navigation
+            'Sec-Fetch-Site': 'none',
+            'Sec-Fetch-User': '?1'
+    }
+});
 
             if (!response.ok) {
                 throw new Error(`HTTP ${response.status}`);
