--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                 <div class="flex flex-col md:flex-row items-center justify-center gap-6 mb-2">
                     <div class="flex-1 flex justify-end">
                         <div id="pythiaQuote" class="border-4 border-green-500 p-4 bg-black text-green-400 max-w-md text-left">
-                            "At Delphi in ancient Greece, the Pythia spoke cryptic truths from the gods. Now seek her oracle wisely — your site awaits her verdict!"
+                            At Delphi in ancient Greece, the Pythia spoke cryptic truths from the gods. Now seek her oracle wisely — your site awaits her verdict!
                         </div>
                     </div>
                     
