--- a/index.html
+++ b/index.html
@@ -341,6 +341,20 @@
             <div id="pillar3-future-container" class="hidden grid grid-cols-2 md:grid-cols-3 gap-4 mb-8 max-w-lg mx-auto">
                 </div>
 
+            <div id="leaderboard" class="hidden modern-card bg-white rounded-2xl shadow-xl p-6 mb-8">
+                <h2 class="text-2xl font-bold text-gray-800 mb-4"> 🏆 Global Leaderboard</h2>
+                <div class="grid md:grid-cols-2 gap-6">
+                    <div>
+                        <h3 class="text-lg font-bold text-green-600 mb-3">Top 10 Sites (User Scanned)</h3>
+                        <div id="topSites" class="space-y-2"></div>
+                    </div>
+                    <div>
+                        <h3 class="text-lg font-bold text-red-600 mb-3">Bottom 10 Sites (User Scanned)</h3>
+                        <div id="bottomSites" class="space-y-2"></div>
+                    </div>
+                </div>
+            </div>
+
             <div class="grid lg:grid-cols-2 gap-8 mb-8">
                 <div class="modern-card bg-white rounded-2xl shadow-xl p-6">
                     <h2 class="text-2xl font-bold text-gray-800 mb-2"> ⚔️ Rivalry Battle Arena</h2>
