--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                 <div class="flex flex-col md:flex-row items-center justify-center gap-6 mb-2">
                     <div class="flex-1 flex justify-end">
                         <div id="pythiaQuote" class="border-4 border-green-500 p-4 bg-black text-green-400 max-w-md text-left">
-                            "At Delphi in ancient Greece, the Pythia spoke cryptic truths from the gods. Now seek her oracle wisely — your site awaits her verdict!"
+                            At Delphi in ancient Greece, the Pythia spoke cryptic truths from the gods. Now seek her oracle wisely — your site awaits her verdict!
                         </div>
                     </div>
                     
@@ -1006,8 +1006,8 @@ async function analyzeSite() {
                 <div class="text-xs font-bold uppercase ${metric.id === 'echo' ? 'text-lime-800' : 'text-gray-500'}">
                     ${metric.id.toUpperCase()}
                     <div class="tooltip ml-1 inline-block cursor-pointer text-gray-400 hover:text-gray-700">
-                        ?
-                        <span class="tooltiptext">${metric.tooltip}</span>
+                    (i)
+                    <span class="tooltiptext">${metric.tooltip}</span>
                     </div>
                 </div>
                 <div class="text-2xl font-bold ${isRetro ? retroScoreColor : scoreColor} my-1">${score}</div>
