--- a/index.html
+++ b/index.html
@@ -217,6 +217,10 @@
         .menu-overlay li {
             color: #1f2937 !important; /* Force dark gray for readability on white background */
         }
+
+        #leaderboard {
+        display: none !important;
+        }
         
         /* Exception: ensure retro mode text is still bright green */
         body.retro .menu-overlay p, 
